[package]
name = "hello"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
example-no-std = {version = "0.1.0", path = "../example-no-std" }
features-no-std = { version = "0.1.0", path = "../features-no-std" }

[features]
default = ["std"]
std  = [
    'features-no-std/std',
]
